--- a/api/api.csproj
+++ b/api/api.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="ServiceStack.Redis.Core" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
